# LlamaMtmdAndroid

./: README.md  build-android.sh  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/llamamtmdapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/llamamtmdapp/: MainActivity.kt
app/src/main/java/com/example/llamamtmdapp/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: edittext_background.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/llamamtmdapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
